--- a/index.html
+++ b/index.html
@@ -1,6 +1,1 @@
----
-layout: default
-title: Home
----
-
-<h1>Hello, world!</h1>
+<!DOCTYPE html> <html lang="en"> <title>Jekyll Up &middot; Home</title> <meta charset="utf-8"> <meta content="width=device-width, initial-scale=1.0" name="viewport"> <link href="/assets/style.css?1745455287" rel="stylesheet"> <body> <h1>Hello, world!</h1> <script src="/assets/main.js?1745455287"></script> </body> </html>
