--- a/index.html
+++ b/index.html
@@ -3,4 +3,6 @@ layout: default
 title: Home
 ---
 
+<img alt="Dr. Jekyll raising his ruby vial in joy" src="{{ site.url }}/assets/images/logo.png" style="width: 150px;">
+
 <h1>Hello, world!</h1>
