Replace logo and add simple splash page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@ layout: default
 title: Home
 ---
 
-<img alt="Dr. Jekyll raising his ruby vial in joy" src="{{ site.url }}/assets/images/logo.png" style="width: 150px;">
-
-<h1>Hello, world!</h1>
+<section class="flex items-center justify-center text-center" style="height: 100vh;">
+  <div>
+    <img alt="Dr. Jekyll raising his ruby vial in joy" src="{{ site.url }}/assets/images/logo.png" style="width: 150px;">
+    <h1>Jekyll Up</h1>
+  </div>
+</section>
