Use emoji for logo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ title: Home
 
 <section class="flex items-center justify-center text-center" style="height: 100vh;">
   <div>
-    <img alt="Dr. Jekyll raising his ruby vial in joy" src="{{ site.url }}/assets/images/logo.png" style="width: 150px;">
-    <h1>Jekyll Up</h1>
+    <h1 class="h3 mb1">Jekyll Up 🧪</h1>
+    <h2 class="h6 mb2">Get up and running with a minimal Jekyll site scaffold</h2>
+    <a class="black block underline" href="https://github.com/advaitchaitanya/jekyll-up">View on GitHub</a>
   </div>
 </section>
